Added code for creating and training model

--- a/car_model_classifier_nb.ipynb
+++ b/car_model_classifier_nb.ipynb
@@ -6,7 +6,7 @@
       "name": "car_model_classifier_nb.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMFg09PNCGZJvP17ijBcIgn"
+      "authorship_tag": "ABX9TyOvUae+H9TlMEjQDiPn45ru"
     },
     "kernelspec": {
       "name": "python3",
@@ -33,11 +33,11 @@
       "metadata": {
         "id": "mfdFjwFS2-Wu",
         "colab_type": "code",
+        "outputId": "1fdc9be2-6b74-4fb5-c5a2-2acd016da14d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "1fdc9be2-6b74-4fb5-c5a2-2acd016da14d"
+        }
       },
       "source": [
         "%tensorflow_version 2.x\n",
@@ -49,7 +49,7 @@
         "print(f\"Tensorflow version: {tf.__version__}\")\n",
         "tf.executing_eagerly()"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,24 +77,26 @@
       "metadata": {
         "id": "5LskEYhV6Llv",
         "colab_type": "code",
+        "outputId": "91e75580-f8ec-48f2-c7e6-b18f391cf06b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "91e75580-f8ec-48f2-c7e6-b18f391cf06b"
+        }
       },
       "source": [
-        "ds_train, ds_valid, ds_test = tfds.load(\"cars196\", split=[\"train[-80%:]\", \"train[:10%]\", \"test\"])\n",
-        "for example in ds_train.take(5):\n",
-        "    bbox, image, label = example[\"bbox\"], example[\"image\"], example[\"label\"]\n",
+        "(ds_train_input, ds_train_label), (ds_valid_input, ds_valid_label), (ds_test_input, ds_test_label) = tfds.load(\"cars196\", split=[\"train[:80%]\", \"train[-20%:]\", \"test\"], as_supervised=True)\n",
+        "for i in range(5):\n",
+        "    #bbox, image, label = example[\"bbox\"], example[\"image\"], example[\"label\"]\n",
+        "    label = ds_train_label[i]\n",
+        "    image = ds_train_input[i]\n",
         "    image = tf.image.resize(image, [300, 600]) / 255\n",
         "    plt.imshow(image)\n",
         "    plt.show()\n",
-        "    print(f\"Bbox: {bbox}\")\n",
+        "    #print(f\"Bbox: {bbox}\")\n",
         "    print(f\"Image size: {image.shape}, {image.dtype}\")\n",
         "    print(f\"Label: {label}\")"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -213,11 +215,11 @@
       "metadata": {
         "id": "mhRcMW-hdAY9",
         "colab_type": "code",
+        "outputId": "aa80c272-ad17-48d4-95e3-48a39573a5de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 752
-        },
-        "outputId": "aa80c272-ad17-48d4-95e3-48a39573a5de"
+        }
       },
       "source": [
         "try:\n",
@@ -230,7 +232,7 @@
         "tf.tpu.experimental.initialize_tpu_system(tpu)\n",
         "tpu_strategy = tf.distribute.experimental.TPUStrategy(tpu)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,6 +517,68 @@
           "name": "stderr"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mdT9fEbtlKdR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def create_model():\n",
+        "  pretrained_model = tf.keras.applications.Xception(input_shape=[300, 600, 3], include_top=False)\n",
+        "  pretrained_model.trainable = True\n",
+        "  model = tf.keras.Sequential([\n",
+        "    pretrained_model,\n",
+        "    tf.keras.layers.GlobalAveragePooling2D(),\n",
+        "    tf.keras.layers.Dense(5, activation='softmax')\n",
+        "  ])\n",
+        "  adam = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
+        "  model.compile(optimizer=adam, loss = 'categorical_crossentropy', metrics=['accuracy'])\n",
+        "  return model\n",
+        "\n",
+        "with tpu_strategy.scope(): # creating the model in the TPUStrategy scope means we will train the model on the TPU\n",
+        "  model = create_model()\n",
+        "model.summary()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rWQdJC4qlKo5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_size = 8144\n",
+        "test_size = 8041\n",
+        "batch_size = 256\n",
+        "steps_per_epoch = train_size // batch_size\n",
+        "num_epochs = 15\n",
+        "\n",
+        "history = model.fit(ds_train, validation_data=ds_valid, steps_per_epoch=steps_per_epoch, epochs=num_epochs)\n",
+        "\n",
+        "final_accuracy = history.history[\"val_accuracy\"][-5:]\n",
+        "print(\"FINAL ACCURACY MEAN-5: \", np.mean(final_accuracy))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yq4Pi-gclQ-t",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
